--- a/docs/01.语言/01.Go/13.context.md
+++ b/docs/01.语言/01.Go/13.context.md
@@ -15,61 +15,49 @@ author:
 本文代码基于 go1.17.13，src/context/context.go
 :::
 ## 一、简述
-* `context` 包提供了在 goroutine 之间传递请求特定数据、取消操作以及设置截止时间的机制，可以帮助用户管理 goroutine 的生命周期，可以更好地管理并发操作，避免资源泄漏和优雅地处理取消操作；
-* `context` 是线程安全的，可以在多个 goroutine 之间共享和传递，但是应该注意避免在每个函数中传递，而是将其作为参数传递给函数的顶层调用，并将其传递给需要使用 `context` 的函数，这样可以更好地控制 `context` 的生命周期和传递；
+* context 包提供了在其他跨API边界和 goroutine 之间<span style="color: red;">传递特定数据、取消操作以及设置截止时间</span>的机制，可以帮助用户管理 goroutine 的生命周期，以更好地管理并发操作，避免资源泄漏和优雅地处理取消操作；
+* context 是线程安全的，可以在多个 goroutine 之间共享和传递，但不应该在每个函数中传递，而是将其作为参数传递给函数的顶层调用，并将其传递给需要使用 context 的函数，这样可以更好地控制 context 的生命周期；
 
 ## 二、基本原理
-* <span style="color: red;">WaitGroup 首次使用后不允许被复制；</span>
-* `context.Context` 是一个接口类型，定义了一组方法来处理上下文相关的操作。以下是一些 `context.Context` 的基本方法和用途：
-- `context.Background()`：返回一个空的上下文，它是所有上下文的根节点。通常用于整个应用程序的上下文。
-- `context.TODO()`：类似于 `context.Background()`，但在还不清楚应该使用哪个上下文时使用。
-- `context.WithCancel(parent)`：返回一个可取消的上下文和一个取消函数。当调用取消函数时，该上下文和其子上下文都会收到取消信号。
-- `context.WithDeadline(parent, deadline)`：返回一个带有截止时间的上下文和取消函数。当截止时间过期时，该上下文和其子上下文都会收到取消信号。
-- `context.WithTimeout(parent, timeout)`：返回一个带有超时时间的上下文和取消函数。超过指定的超时时间后，该上下文和其子上下文都会收到取消信号。
-- `context.WithValue(parent, key, value)`：返回一个带有键值对的上下文。可以在 Goroutine 之间传递请求特定的数据。
+- `context.Background()`：返回一个空的上下文，是所有上下文的根节点，通常用于整个应用程序的上下文；
+- `context.TODO()`：类似于 `context.Background()`，在不清楚应该使用哪个上下文时可以临时使用；
+- `context.WithCancel(parent)`：返回一个可取消的上下文和一个取消函数，当调用取消函数时，该上下文和其子上下文都会收到取消信号；
+- `context.WithDeadline(parent, d)`：返回一个带有截止时间的上下文和取消函数，当截止时间过期时，该上下文和其子上下文都会收到取消信号；
+- `context.WithTimeout(parent, timeout)`：返回一个带有超时时间的上下文和取消函数，超过指定的超时时间后，该上下文和其子上下文都会收到取消信号；
+- `context.WithValue(parent, key, value)`：返回一个带有键值对的上下文，可以在 goroutine 之间传递请求特定的数据；
+- `Background()` 或 `TODO()` 可以创建一个根 Context 对象；
+- `WithCancel`、`WithDeadline`、`WithTimeout` 和 `WithValue` 函数接受一个 Context(父类) 并返回一个派生 Context(子类) 和一个 CancelFunc；
+- 调用 CancelFunc 会取消子协程及其子协程，移除父协程对子协程的引用，并停止所有相关的计时器，未能调用 CancelFunc 会泄漏子协程及其子协程，直到父进程被取消或计时器触发；
+- 在并发操作中，可以通过 Context 对象的 `Done()` 方法来获取一个 channel，当 Context 被取消或者超时时，这个 channel 会关闭，可以通过监听这个通道来处理取消或超时的情况；
 
 ## 三、基本用法
 ### 1，应用场景
+* rpc 请求；
+::: details
+```go
+
+```
+:::
+* 超时控制；
+* ::: details
+```go
+
+```
+:::
+* cookie 传递；
+::: details
+```go
+
+```
+:::
 
 ### 2，注意事项
-
-### 3，简单示例
-- **不要将 Context 塞到结构体**里。直接将 Context 类型作为函数的第一参数，而且一般都命名为 ctx。
-- **不要向函数传入一个 nil 的 context**，如果你实在不知道传什么，标准库给你准备好了一个 context：**todo**。
-- **不要把本应该作为函数参数的类型塞到 context 中**，context 存储的应该是一些共同的数据。例如：登陆的session、cookie 等。
-- 同一个 context 可能会被传递到多个 goroutine，**context 是并发安全的**。
-
-Package context 包定义了context类型，其中包含截止日期、取消信号以及其他跨API边界和进程之间的请求作用域值。
-对服务器的传入请求应该创建上下文，对服务器的传出调用应该接受上下文。
-它们之间的函数调用链必须传播上下文，可以选择将其替换为使用 WithCancel、WithDeadline、WithTimeout 或 WithValue 创建的派生上下文。
-当 Context 被取消时，所有从它派生的上下文也被取消。
-WithCancel、WithDeadline 和 WithTimeout 函数接受一个 Context(父类) 并返回一个派生 Context(子类) 和一个 CancelFunc。
-调用 CancelFunc 会取消子进程及其子进程，移除父进程对子进程的引用，并停止所有相关的计时器。
-未能调用 CancelFunc 会泄漏子进程及其子进程，直到父进程被取消或计时器触发。
-go - vet 工具检查在所有控制流路径上是否使用了 CancelFuncs。
-使用上下文的程序应该遵循这些规则，以保持包间接口的一致性，并使静态分析工具能够检查上下文传播:不要在结构类型中存储上下文;
-相反，将上下文显式地传递给需要它的每个函数。Context应该是第一个参数，通常命名为ctx:
-	func DoSomething(ctx context.Context, arg Arg) error {
-		// ... use ctx ...
-	}
-即使函数允许，也不要传递nil上下文。通过上下文。如果您不确定要使用哪个上下文，则 TODO。
-仅将上下文值用于传输进程和 api 的请求作用域数据，不能用于向函数传递可选参数。
-同一个 Context 可以被传递给运行在不同协程中的函数；上下文对于多个协程同时使用是安全的；
-请参阅https://blog.golang.org/context获取使用上下文的服务器的示例代码。
-在 Go 语言中，context 包提供了一种在并发操作中传递请求作用域的方法。Context 可以用于控制并发操作、取消操作、超时处理等，并且是在 Go 语言中处理并发时非常重要和常用的工具。
-Context 的基本原理可以概括如下：
-Context 是一个接口类型，它定义了跟踪请求的截止日期、取消信号和请求范围值等功能。
-通过 context.Background() 或 context.TODO() 创建一个根 Context 对象。
-通过 context.WithCancel(parent Context)、context.WithDeadline(parent Context, time.Time)、context.WithTimeout(parent Context, time.Duration) 或 context.WithValue(parent Context, key interface{}, val interface{}) 等方法可以从父 Context 派生出新的 Context 对象。
-任意一个 Context 都可以被用来取消自身或者派生出新的 Context，从而传播取消信号。
-在并发操作中，可以通过 Context 对象的 .Done() 方法来获取一个通道（channel），当 Context 被取消或者超时时，这个通道会关闭，可以通过监听这个通道来处理取消或超时的情况。
-总的来说，Context 的基本原理就是通过创建和传播 Context 对象来管理并发操作的请求作用域，实现控制和取消操作、处理超时等功能。这使得在 Go 中编写并发安全的代码变得更加方便和可靠。
-
-Context 在 Go 服务器中，每个传入的请求都在自己的 goroutine 中处理。
-请求处理程序通常会启动额外的 goroutine 来访问后端，例如 数据库和 RPC 服务。
-处理请求的 goroutine 集通常需要访问 特定于请求的值，例如最终用户的身份、授权 令牌和请求的截止时间。
-当请求被取消或超时时，所有 goroutine 都会处理该请求 请求应快速退出，以便系统可以回收它们所在的任何资源 用。
-Context 是一个携带了截止时间、取消信息、以及其他值的、跨API界限的、可以被多个线程同时调用的上下文
+- **不要将 Context 塞到结构体**里，直接将 Context 类型作为函数的第一参数，而且一般都命名为 ctx；
+- **不要向函数传入一个 `nil` 的 Context**，如果不确定要使用哪个上下文，可以传递`context.TODO()`；
+- **不要把本应该作为函数参数的类型塞到 context 中**，仅将 context 值用于传输进程和 api 的请求作用域数据，例如：登陆的 session、cookie 等；
+- 同一个 context 可以被传递给运行在不同 goroutine 中的函数，**context 对于多个 goroutine 同时使用是安全的**；
+- 对服务器的传入请求应该创建上下文，对服务器的传出调用应该接受上下文，可以选择使用`WithCancel`、`WithDeadline`、`WithTimeout` 和 `WithValue` 函数接创建的派生上下文；
+- `go -vet` 工具检查在所有控制流路径上是否使用了 CancelFuncs；
 
 ## 四、源码解读
 ### 1，Context
@@ -142,6 +130,7 @@ type Context interface {
 }
 ```
 :::
+* `context.Context` 是一个接口类型，定义了一组方法来处理上下文相关的操作；
 
 ### 2，emptyCtx
 :::details
@@ -552,10 +541,11 @@ func (c *valueCtx) Value(key interface{}) interface{} {
 	}
 	return c.Context.Value(key)
 }
-```go
+```
 :::
 
 
->**参考文章**<br>
-> [1] [一文掌握 Go 并发模式 Context 上下文](https://juejin.cn/post/7233981178101186619)
-> [2] [【Go语言】小白也能看懂的context包详解：从入门到精通](https://segmentfault.com/a/1190000040917752)
+> **参考文章**<br>
+> [1] [一文掌握 Go 并发模式 Context 上下文](https://juejin.cn/post/7233981178101186619)<br>
+> [2] [小白也能看懂的context包详解：从入门到精通](https://segmentfault.com/a/1190000040917752)<br>
+> [3] [golang中Context的使用场景](https://studygolang.com/articles/18316?fr=sidebar)<br>
