--- a/docs/01.语言/01.Go/13.context.md
+++ b/docs/01.语言/01.Go/13.context.md
@@ -17,6 +17,7 @@ author:
 ## 一、简述
 * context 包提供了在其他跨API边界和 goroutine 之间<span style="color: red;">传递特定数据、取消操作以及设置截止时间</span>的机制，可以帮助用户管理 goroutine 的生命周期，以更好地管理并发操作，避免资源泄漏和优雅地处理取消操作；
 * context 是线程安全的，可以在多个 goroutine 之间共享和传递，但不应该在每个函数中传递，而是将其作为参数传递给函数的顶层调用，并将其传递给需要使用 context 的函数，这样可以更好地控制 context 的生命周期；
+* 在echo源码和gin的源码中，应用非常广泛；
 
 ## 二、基本原理
 - `context.Background()`：返回一个空的上下文，是所有上下文的根节点，通常用于整个应用程序的上下文；
@@ -35,7 +36,114 @@ author:
 * rpc 请求；
 ::: details
 ```go
+package main
 
+import (
+	"context"
+	"fmt"
+	"time"
+)
+
+func reqTaskCancel(ctx context.Context, name string) {
+	for {
+		select {
+		case <-ctx.Done():
+			fmt.Println("stop", name, ctx.Err())
+			return
+		default:
+			fmt.Println(name, "send request")
+			time.Sleep(1 * time.Second)
+		}
+	}
+}
+
+func contextCancel() {
+	ctx, cancel := context.WithCancel(context.Background())
+	go reqTaskCancel(ctx, "worker1")
+	time.Sleep(3 * time.Second)
+	cancel()
+	time.Sleep(3 * time.Second)
+}
+
+func reqTaskDeadline(ctx context.Context, name string) {
+	for {
+		select {
+		case <-ctx.Done():
+			fmt.Println("stop", name, ctx.Err())
+			return
+		default:
+			fmt.Println(name, "send request")
+			time.Sleep(1 * time.Second)
+		}
+	}
+}
+
+func contextDeadLine() {
+	ctx, cancel := context.WithDeadline(context.Background(), time.Now().Add(1*time.Second))
+	go reqTaskDeadline(ctx, "worker1")
+	go reqTaskDeadline(ctx, "worker2")
+
+	time.Sleep(3 * time.Second)
+	fmt.Println("before cancel")
+	cancel()
+	time.Sleep(3 * time.Second)
+}
+
+type options struct{ Interval time.Duration }
+
+func reqTaskValue(ctx context.Context, name string) {
+	for {
+		select {
+		case <-ctx.Done():
+			fmt.Println("stop", name, ctx.Err())
+			return
+		default:
+			fmt.Println(name, "send request", ctx.Err())
+			op := ctx.Value("options").(*options)
+			time.Sleep(op.Interval * time.Second)
+		}
+	}
+}
+
+func contextValue() {
+	ctx, cancel := context.WithCancel(context.Background())
+	vCtx := context.WithValue(ctx, "options", &options{1})
+
+	go reqTaskValue(vCtx, "worker1")
+	go reqTaskValue(vCtx, "worker2")
+
+	time.Sleep(3 * time.Second)
+	cancel()
+	time.Sleep(3 * time.Second)
+}
+
+func contextTimeout() {
+	ctx, cancel := context.WithTimeout(context.Background(), 2*time.Second)
+	go reqTaskCancel(ctx, "worker1")
+	go reqTaskCancel(ctx, "worker2")
+
+	time.Sleep(3 * time.Second)
+	fmt.Println("before cancel")
+	cancel()
+	time.Sleep(3 * time.Second)
+}
+
+func main() {
+	contextCancel()
+	fmt.Printf("cancel end -------------------\n\n")
+	time.Sleep(3 * time.Second)
+
+	contextDeadLine()
+	fmt.Printf("deadline end -------------------\n\n")
+	time.Sleep(3 * time.Second)
+
+	contextTimeout()
+	fmt.Printf("timeout end -------------------\n\n")
+	time.Sleep(3 * time.Second)
+	
+	contextValue()
+	fmt.Printf("value end -------------------\n\n")
+}
 ```
 :::
 
