--- a/docs/01.语言/01.Go/13.context.md
+++ b/docs/01.语言/01.Go/13.context.md
@@ -17,7 +17,6 @@ author:
 ## 一、简述
 * context 包提供了在其他跨API边界和 goroutine 之间<span style="color: red;">传递特定数据、取消操作以及设置截止时间</span>的机制，可以帮助用户管理 goroutine 的生命周期，以更好地管理并发操作，避免资源泄漏和优雅地处理取消操作；
 * context 是线程安全的，可以在多个 goroutine 之间共享和传递，但不应该在每个函数中传递，而是将其作为参数传递给函数的顶层调用，并将其传递给需要使用 context 的函数，这样可以更好地控制 context 的生命周期；
-* 在echo源码和gin的源码中，应用非常广泛；
 
 ## 二、基本原理
 - `context.Background()`：返回一个空的上下文，是所有上下文的根节点，通常用于整个应用程序的上下文；
@@ -33,7 +32,18 @@ author:
 
 ## 三、基本用法
 ### 1，应用场景
-* rpc 请求；
+* 主要用于处理并发请求的超时、参数传递、及时取消等，能够有效控制请求过程中的资源使用和避免潜在的资源泄露；
+* 广泛应用于go的http模块、echo框架和gin框架中，以及rpc请求、并发数控制、错误传播等场景；
+
+### 2，注意事项
+- **不要将 Context 塞到结构体**里，直接将 Context 类型作为函数的第一参数，而且一般都命名为 ctx；
+- **不要向函数传入一个 `nil` 的 Context**，如果不确定要使用哪个上下文，可以传递`context.TODO()`；
+- **不要把本应该作为函数参数的类型塞到 context 中**，仅将 context 值用于传输进程和 api 的请求作用域数据，例如：登陆的 session、cookie 等；
+- 同一个 context 可以被传递给运行在不同 goroutine 中的函数，**context 对于多个 goroutine 同时使用是安全的**；
+- 对服务器的传入请求应该创建上下文，对服务器的传出调用应该接受上下文，可以选择使用`WithCancel`、`WithDeadline`、`WithTimeout` 和 `WithValue` 函数接创建的派生上下文；
+- `go -vet` 工具检查在所有控制流路径上是否使用了 CancelFuncs；
+
+### 3，简单示例
 ::: details
 ```go
 package main
@@ -147,102 +157,68 @@ func main() {
 ```
 :::
 
-* 超时控制；
-::: details
-```go
-
-```
-:::
-
-* cookie 传递；
-::: details
-```go
-
-```
-:::
-
-### 2，注意事项
-- **不要将 Context 塞到结构体**里，直接将 Context 类型作为函数的第一参数，而且一般都命名为 ctx；
-- **不要向函数传入一个 `nil` 的 Context**，如果不确定要使用哪个上下文，可以传递`context.TODO()`；
-- **不要把本应该作为函数参数的类型塞到 context 中**，仅将 context 值用于传输进程和 api 的请求作用域数据，例如：登陆的 session、cookie 等；
-- 同一个 context 可以被传递给运行在不同 goroutine 中的函数，**context 对于多个 goroutine 同时使用是安全的**；
-- 对服务器的传入请求应该创建上下文，对服务器的传出调用应该接受上下文，可以选择使用`WithCancel`、`WithDeadline`、`WithTimeout` 和 `WithValue` 函数接创建的派生上下文；
-- `go -vet` 工具检查在所有控制流路径上是否使用了 CancelFuncs；
-
 ## 四、源码解读
 ### 1，Context
 :::details
 ```go
 type Context interface {
-	// Deadline 当将要取消代表此上下文完成的工作时，返回截止时间。截止时间在未设置时返回 ok==false。对 Deadline 的连续调用将返回相同的结果。
 	Deadline() (deadline time.Time, ok bool)
-
-	// 	// Stream 使用 DoSomething 生成值并将它们发送到 out，直到 DoSomething 返回错误或 ctx.Done() 是关闭的。
-	//  func Stream(ctx context.Context, out chan<- Value) error {
-	//  	for {
-	//  		v, err := DoSomething(ctx)
-	//  		if err != nil {
-	//  			return err
-	//  		}
-	//  		select {
-	//  		case <-ctx.Done():
-	//  			return ctx.Err()
-	//  		case out <- v:
-	//  		}
-	//  	}
-	//  }
-	// 当将要取消代表此上下文完成的工作时，返回一个关闭的通道。
-	// 如果此上下文永远无法取消，则可能会返回 nil。连续调用返回相同的值。
-	// 在取消函数返回后，完成通道的关闭可能会异步发生。
-	// WithCancel 安排在调用 cancel 时关闭 Done；
-	// WithDeadline 安排在截止日期到期时关闭 Done；
-	// WithTimeout 安排在超时过后关闭 Done；
-	// 该通道是只读的
-	// 在用户执行 case: <- ctx.Done() 时调用，调用Done函数时会惰性创建 chan
 	Done() <-chan struct{}
-
-	// Err 如果 Done 尚未关闭，则 Err 返回 nil。如果 Done 已关闭，则 Err 将返回一个非 nil 错误。
-	// 如果上下文已取消，则为“Canceled”；
-	// 如果上下文的截止时间已过，则为“DeadlineExceeded”；
-	// 在 Err 返回非 nil 错误后，对 Err 的连续调用将返回相同的错误。
 	Err() error
-
-	// Value 返回与此上下文关联的键值，如果没有值与键关联，则返回 nil。具有相同键的连续调用 Value 将返回相同的结果。
-	// 仅对传输进程和 API 边界的请求范围数据使用上下文值，而不对将可选参数传递给函数使用上下文值。
-	// 键标识上下文中的特定值。希望在上下文中存储值的函数通常在全局变量中分配一个键，然后将该键用作 context.WithValue 和 Context.Value 的参数。
-	// 键可以是任何支持相等的类型，包应将键定义为未导出的类型以避免冲突。定义上下文键的包应为使用该键存储的值提供类型安全的访问器：
-	//
-	// 	// Package 包 user 定义了一个 User 类型用于在上下文中存储
-	// 	package user
-	//
-	// 	import "context"
-	//
-	// 	// User 是存储在上下文中的值的类型
-	// 	type User struct {...}
-	//
-	// 	// key 是定义在这个包中未导出的类型，这样可以防止与其他包中定义的 key 发生冲突
-	// 	type key int
-	//
-	// 	// userKey 是存储在上下文中 user.User 类型的值，是非导出的，用户不能直接使用，需要用下面的函数创建
-	// 	var userKey key
-	//
-	// 	// NewContext 返回一个值为 u 的新 Context
-	// 	func NewContext(ctx context.Context, u *User) context.Context {
-	// 		return context.WithValue(ctx, userKey, u)
-	// 	}
-	//
-	// 	// FromContext 返回一个类型为 User 存储在 ctx 中的值，如果有的话
-	// 	func FromContext(ctx context.Context) (*User, bool) {
-	// 		u, ok := ctx.Value(userKey).(*User)
-	// 		return u, ok
-	// 	}
 	Value(key interface{}) interface{}
 }
 ```
 :::
 * `context.Context` 是一个接口类型，定义了一组方法来处理上下文相关的操作；
+* `Deadline` 返回该上下文的截止时间，未设置截止时间时返回 ok==false，连续调用将返回相同的结果；
+* `Done()` 返回一个只读的 chan，在用户执行 `case: <- ctx.Done()` 函数时会惰性创建 chan；当该上下文主动取消、超时或到截止时间时，该 chan 会关闭，通道的关闭可能会异步发生；如果此上下文永远无法取消，则可能会返回 nil，连续调用返回相同的值；通过监听该 chan 是否关闭来判断该上下文是否取消，示例如下:
+	```go
+	// Stream 使用 DoSomething 生成值并将它们发送到 out，直到 DoSomething 返回错误或 ctx.Done() 是关闭的。
+	func Stream(ctx context.Context, out chan<- Value) error {
+		for {
+			v, err := DoSomething(ctx)
+			if err != nil {
+				return err
+			}
+			select {
+			case <-ctx.Done():
+				return ctx.Err()
+			case out <- v:
+			}
+		}
+	}
+	```
+* `Err` 如果 `Done` 尚未关闭，则 `Err` 返回 `nil`；如果 `Done` 已关闭，则 `Err` 将返回一个非 `nil` 错误；如果上下文已取消，则为"Canceled"；如果上下文的截止时间已过，则为"DeadlineExceeded"；在 `Err` 返回非 `nil` 错误后，对 `Err` 的连续调用将返回相同的错误；
+* `Value` 返回与此上下文关联的键值，如果没有值与键关联，则返回 `nil`，具有相同键的连续调用 `Value` 将返回相同的结果；仅对传输进程和 API 边界的请求范围数据使用上下文值，而不对将可选参数传递给函数使用上下文值；键标识上下文中的特定值，希望在上下文中存储值的函数通常在全局变量中分配一个键，然后将该键用作 `context.WithValue` 和 `context.Value` 的参数；键可以是任何支持**相等**的类型，包应将键定义为**未导出**的类型以避免冲突，定义上下文键的包应为使用该键存储的值提供类型安全的访问器，示例如下：
+	```go
+	// Package 包 user 定义了一个 User 类型用于在上下文中存储
+	package user
+
+	import "context"
+
+	// User 是存储在上下文中的值的类型
+	type User struct {...}
+
+	// key 是定义在这个包中未导出的类型，这样可以防止与其他包中定义的 key 发生冲突
+	type key int
+
+	// userKey 是存储在上下文中 user.User 类型的值，是非导出的，用户不能直接使用，需要用下面的函数创建
+	var userKey key
+
+	// NewContext 返回一个值为 u 的新 Context
+	func NewContext(ctx context.Context, u *User) context.Context {
+		return context.WithValue(ctx, userKey, u)
+	}
+
+	// FromContext 返回一个类型为 User 存储在 ctx 中的值，如果有的话
+	func FromContext(ctx context.Context) (*User, bool) {
+		u, ok := ctx.Value(userKey).(*User)
+		return u, ok
+	}
+	```
 
 ### 2，emptyCtx
+
 :::details
 ```go
 // Canceled 上下文取消的错误，当上下文取消时，在调用Context.Err()函数时返回
