--- a/docs/01.语言/01.Go/13.context.md
+++ b/docs/01.语言/01.Go/13.context.md
@@ -234,7 +234,6 @@ func (deadlineExceededError) Error() string   { return "context deadline exceede
 func (deadlineExceededError) Timeout() bool   { return true } // Is the error a timeout?
 func (deadlineExceededError) Temporary() bool { return true } // Is the error temporary?
 
-// 一个空的上下文，emptyCtx 永远不会取消，没有值，也没有截止日期。它不是 struct{}，因为这种类型的变量必须具有不同的地址。
 type emptyCtx int
 
 func (*emptyCtx) Deadline() (deadline time.Time, ok bool) {
@@ -278,8 +277,120 @@ func TODO() Context {
 
 ```
 :::
+* `emptyCtx`一个空的上下文类型，实现了`Context`的接口，emptyCtx 永远不会取消，没有值，也没有截止日期；
+* `Background`和`TODO`，返回一个非 nil 的空上下文，即 emptyCtx 的指针类型；
+* `Canceled`和`DeadlineExceeded`分别是上下文取消和到期的错误，其中`DeadlineExceeded`变量类型还实现了`net.Error`接口，能用于网络请求的上下文；
 
-### 3，WithCancel
+
+### 3，cancelCtx
+::: details
+```go
+// 取消器是可以直接取消的上下文类型。实现者是 cancelCtx 和 timerCtx。
+type canceler interface {
+	cancel(removeFromParent bool, err error)
+	Done() <-chan struct{}
+}
+
+// 可复用的关闭通道
+var closedchan = make(chan struct{})
+
+func init() {
+	close(closedchan) // todo import, closed the chain at init
+}
+
+// cancelCtx 可以被取消。当被取消后，它也能取消所有实现了canceler的子项
+type cancelCtx struct {
+	Context
+
+	mu       sync.Mutex            // 保护下述字段
+	done     atomic.Value          // 原子类型的值，存储了空结构体管道，懒惰式被创建，该取消函数第一次被调用时关闭它
+	children map[canceler]struct{} // 存储实现了 canceler 接口的子上下文，该取消函数第一次被调用时置为 nil
+	err      error                 // 该取消函数第一次被调用时设置为非空的错误
+}
+
+// Value 通过 key 获取 Value，如果 key 是取消上下文的 cancelCtxKey，则返回自身
+func (c *cancelCtx) Value(key interface{}) interface{} {
+	// 用于判断父上下文对应的对象是否为自己，即是可取消的上下文
+	if key == &cancelCtxKey {
+		return c
+	}
+	return c.Context.Value(key)
+}
+
+// Done 函数返回的是一个只读的 channel，而且没有地方向这个 channel 里面写数据。
+// 所以，直接调用读这个 channel，协程会被 block 住。一般通过搭配 select 来使用。一旦关闭，就会立即读出零值。
+func (c *cancelCtx) Done() <-chan struct{} {
+	d := c.done.Load() // c.done 是否有值，有则直接断言后返回
+	if d != nil {
+		return d.(chan struct{})
+	}
+	c.mu.Lock()
+	defer c.mu.Unlock()
+	d = c.done.Load()
+	if d == nil { // “懒汉式”创建，只有调用了 Done() 方法的时候才会被创建
+		d = make(chan struct{})
+		c.done.Store(d)
+	}
+	return d.(chan struct{})
+}
+
+func (c *cancelCtx) Err() error {
+	c.mu.Lock()
+	err := c.err
+	c.mu.Unlock()
+	return err
+}
+
+type stringer interface {
+	String() string
+}
+
+func contextName(c Context) string {
+	if s, ok := c.(stringer); ok {
+		return s.String()
+	}
+	return reflectlite.TypeOf(c).String()
+}
+
+// 获取上下文的名字
+func (c *cancelCtx) String() string {
+	return contextName(c.Context) + ".WithCancel"
+}
+
+// 该取消函数会关闭 c 中 done 管道，递归取消所有的子上下文，如果 removeFromParent 为真，则将 c 从父上下文中移除
+func (c *cancelCtx) cancel(removeFromParent bool, err error) {
+	if err == nil { // 从被执行的地方传入一个不为空的err，有可能是父上下文的err，有可能是DeadlineExceeded、Canceled
+		panic("context: internal error: missing cancel error")
+	}
+	c.mu.Lock()
+	if c.err != nil { // 该上下文的err不为空，说明已经被其他协程执行过取消函数了
+		c.mu.Unlock()
+		return // already canceled
+	}
+	c.err = err
+	d, _ := c.done.Load().(chan struct{})
+	// 关闭该上下文中的管道，通知其他协程
+	if d == nil {
+		// 表示 Done 函数没有没调用过，给 d 存储一个关闭的管道
+		c.done.Store(closedchan)
+	} else {
+		close(d)
+	}
+	for child := range c.children {
+		// 遍历所有子上下文，并递归执行子函数的取消函数
+		child.cancel(false, err)
+	}
+	c.children = nil
+	c.mu.Unlock()
+
+	if removeFromParent { // 从父上下文中移除自己
+		removeChild(c.Context, c)
+	}
+}
+```
+:::
+
+### 4，WithCancel
 :::details
 ```go
 // CancelFunc 一个函数类型，表示取消函数的具体执行内容
@@ -388,144 +499,12 @@ func removeChild(parent Context, child canceler) {
 	}
 	p.mu.Unlock()
 }
+```
+:::
 
-// 取消器是可以直接取消的上下文类型。实现者是 cancelCtx 和 timerCtx。
-type canceler interface {
-	cancel(removeFromParent bool, err error)
-	Done() <-chan struct{}
-}
-
-// 可复用的关闭通道
-var closedchan = make(chan struct{})
-
-func init() {
-	close(closedchan) // todo import, closed the chain at init
-}
-
-// cancelCtx 可以被取消。当被取消后，它也能取消所有实现了canceler的子项
-type cancelCtx struct {
-	Context
-
-	mu       sync.Mutex            // 保护下述字段
-	done     atomic.Value          // 原子类型的值，存储了空结构体管道，懒惰式被创建，该取消函数第一次被调用时关闭它
-	children map[canceler]struct{} // 存储实现了 canceler 接口的子上下文，该取消函数第一次被调用时置为 nil
-	err      error                 // 该取消函数第一次被调用时设置为非空的错误
-}
-
-// Value 通过 key 获取 Value，如果 key 是取消上下文的 cancelCtxKey，则返回自身
-func (c *cancelCtx) Value(key interface{}) interface{} {
-	// 用于判断父上下文对应的对象是否为自己，即是可取消的上下文
-	if key == &cancelCtxKey {
-		return c
-	}
-	return c.Context.Value(key)
-}
-
-// Done 函数返回的是一个只读的 channel，而且没有地方向这个 channel 里面写数据。
-// 所以，直接调用读这个 channel，协程会被 block 住。一般通过搭配 select 来使用。一旦关闭，就会立即读出零值。
-func (c *cancelCtx) Done() <-chan struct{} {
-	d := c.done.Load() // c.done 是否有值，有则直接断言后返回
-	if d != nil {
-		return d.(chan struct{})
-	}
-	c.mu.Lock()
-	defer c.mu.Unlock()
-	d = c.done.Load()
-	if d == nil { // “懒汉式”创建，只有调用了 Done() 方法的时候才会被创建
-		d = make(chan struct{})
-		c.done.Store(d)
-	}
-	return d.(chan struct{})
-}
-
-func (c *cancelCtx) Err() error {
-	c.mu.Lock()
-	err := c.err
-	c.mu.Unlock()
-	return err
-}
-
-type stringer interface {
-	String() string
-}
-
-func contextName(c Context) string {
-	if s, ok := c.(stringer); ok {
-		return s.String()
-	}
-	return reflectlite.TypeOf(c).String()
-}
-
-// 获取上下文的名字
-func (c *cancelCtx) String() string {
-	return contextName(c.Context) + ".WithCancel"
-}
-
-// 该取消函数会关闭 c 中 done 管道，递归取消所有的子上下文，如果 removeFromParent 为真，则将 c 从父上下文中移除
-func (c *cancelCtx) cancel(removeFromParent bool, err error) {
-	if err == nil { // 从被执行的地方传入一个不为空的err，有可能是父上下文的err，有可能是DeadlineExceeded、Canceled
-		panic("context: internal error: missing cancel error")
-	}
-	c.mu.Lock()
-	if c.err != nil { // 该上下文的err不为空，说明已经被其他协程执行过取消函数了
-		c.mu.Unlock()
-		return // already canceled
-	}
-	c.err = err
-	d, _ := c.done.Load().(chan struct{})
-	// 关闭该上下文中的管道，通知其他协程
-	if d == nil {
-		// 表示 Done 函数没有没调用过，给 d 存储一个关闭的管道
-		c.done.Store(closedchan)
-	} else {
-		close(d)
-	}
-	for child := range c.children {
-		// 遍历所有子上下文，并递归执行子函数的取消函数
-		child.cancel(false, err)
-	}
-	c.children = nil
-	c.mu.Unlock()
-
-	if removeFromParent { // 从父上下文中移除自己
-		removeChild(c.Context, c)
-	}
-}
-
-// WithDeadline 返回父上下文的副本，并将截止日期调整为不晚于 d。
-// 如果父级的截止时间已经早于 d，则 WithDeadline（parent， d） 在语义上等效于父级。
-// 当截止时间到期、调用返回的取消函数或父上下文的 Done 通道关闭时，返回的上下文的 Done 通道将关闭，以先发生者为准。
-// 取消此上下文会释放与其关联的资源，因此代码应在此上下文中运行的操作完成后立即调用 cancel。
-func WithDeadline(parent Context, d time.Time) (Context, CancelFunc) {
-	if parent == nil {
-		panic("cannot create context from nil parent")
-	}
-	// 判断父上下文是否设置了截止时间，以及截止时间是否早于当前设置的截止时间
-	if cur, ok := parent.Deadline(); ok && cur.Before(d) {
-		// 父上下文设置的截止时间更早，则直接从父上下文中创建，用的是父上下文的截止时间
-		return WithCancel(parent)
-	}
-	// 父上下文设置的截止时间要晚一些，重新从父上下文中创建，并设置自己的截止时间
-	c := &timerCtx{
-		cancelCtx: newCancelCtx(parent),
-		deadline:  d,
-	}
-	// 将自己挂载到 parent，当 parent 取消或管道被关闭时，能自动或手动关闭自己
-	propagateCancel(parent, c)
-	dur := time.Until(d)
-	if dur <= 0 {
-		c.cancel(true, DeadlineExceeded) // deadline has already passed
-		return c, func() { c.cancel(false, Canceled) }
-	}
-	c.mu.Lock()
-	defer c.mu.Unlock()
-	if c.err == nil { // 表示该上线文还没有被取消
-		c.timer = time.AfterFunc(dur, func() { // 为计时器创建一个执行函数，即时间到期后执行该取消函数
-			c.cancel(true, DeadlineExceeded)
-		})
-	}
-	return c, func() { c.cancel(true, Canceled) }
-}
+### 5，timerCtx
+::: details
+```go
 
 // timerCtx 带有计时器和截止日期。它嵌入了一个 cancelCtx 来实现 Done 和 Err。
 // 它通过停止其计时器然后委托给 cancelCtx.cancel 来实现取消。
@@ -561,7 +540,53 @@ func (c *timerCtx) cancel(removeFromParent bool, err error) {
 	}
 	c.mu.Unlock()
 }
+```
+:::
 
+### 6，WithDeadline
+::: details
+```go
+
+// WithDeadline 返回父上下文的副本，并将截止日期调整为不晚于 d。
+// 如果父级的截止时间已经早于 d，则 WithDeadline（parent， d） 在语义上等效于父级。
+// 当截止时间到期、调用返回的取消函数或父上下文的 Done 通道关闭时，返回的上下文的 Done 通道将关闭，以先发生者为准。
+// 取消此上下文会释放与其关联的资源，因此代码应在此上下文中运行的操作完成后立即调用 cancel。
+func WithDeadline(parent Context, d time.Time) (Context, CancelFunc) {
+	if parent == nil {
+		panic("cannot create context from nil parent")
+	}
+	// 判断父上下文是否设置了截止时间，以及截止时间是否早于当前设置的截止时间
+	if cur, ok := parent.Deadline(); ok && cur.Before(d) {
+		// 父上下文设置的截止时间更早，则直接从父上下文中创建，用的是父上下文的截止时间
+		return WithCancel(parent)
+	}
+	// 父上下文设置的截止时间要晚一些，重新从父上下文中创建，并设置自己的截止时间
+	c := &timerCtx{
+		cancelCtx: newCancelCtx(parent),
+		deadline:  d,
+	}
+	// 将自己挂载到 parent，当 parent 取消或管道被关闭时，能自动或手动关闭自己
+	propagateCancel(parent, c)
+	dur := time.Until(d)
+	if dur <= 0 {
+		c.cancel(true, DeadlineExceeded) // deadline has already passed
+		return c, func() { c.cancel(false, Canceled) }
+	}
+	c.mu.Lock()
+	defer c.mu.Unlock()
+	if c.err == nil { // 表示该上线文还没有被取消
+		c.timer = time.AfterFunc(dur, func() { // 为计时器创建一个执行函数，即时间到期后执行该取消函数
+			c.cancel(true, DeadlineExceeded)
+		})
+	}
+	return c, func() { c.cancel(true, Canceled) }
+}
+```
+:::
+
+### 7，WithTimeout
+::: details
+```go
 // WithTimeout returns WithDeadline(parent, time.Now().Add(timeout)).
 //
 // Canceling this context releases resources associated with it, so code should
@@ -575,6 +600,12 @@ func (c *timerCtx) cancel(removeFromParent bool, err error) {
 func WithTimeout(parent Context, timeout time.Duration) (Context, CancelFunc) {
 	return WithDeadline(parent, time.Now().Add(timeout))
 }
+```
+:::
+
+### 8，WithValue
+::: details
+```go
 
 // WithValue 返回父级的副本，其中与 key 关联的值为 val。
 // 仅对传输进程和 API 的请求范围的数据使用上下文值，而不对将可选参数传递给函数。
@@ -629,7 +660,6 @@ func (c *valueCtx) Value(key interface{}) interface{} {
 }
 ```
 :::
-
 
 > **参考文章**<br>
 > [1] [一文掌握 Go 并发模式 Context 上下文](https://juejin.cn/post/7233981178101186619)<br>
