--- a/docs/01.语言/01.Go/14.chan.md
+++ b/docs/01.语言/01.Go/14.chan.md
@@ -11,3 +11,70 @@ author:
   name: erlangtui
   link: https://github.com/erlangtui
 ---
+
+## 一、简述
+* ……
+
+## 二、基本原理
+* <span style="color: red;">基本的实现逻辑</span>
+
+## 三、基本用法
+### 1，应用场景
+
+### 2，注意事项
+
+### 3，简单示例
+
+## 四、源码解读
+### hchan
+::: details
+```go
+type hchan struct {
+	qcount   uint           // chan 中的数据量
+	dataqsiz uint           // chan 循环队列的长度，底层是数组
+	buf      unsafe.Pointer // chan 指向底层缓冲数组的指针
+	elemsize uint16         // chan 中元素大小
+	closed   uint32         // chan 是否被关闭，非0表示关闭
+	elemtype *_type         // chan 中元素类型
+	sendx    uint           // 生产队列可发送的元素在数组中的索引，即从此处开始写入
+	recvx    uint           // 消费队列可接收的元素在数组中的索引，即从此处开始消费
+	recvq    waitq          // 等待接收数据的goroutine队列，消费队列
+	sendq    waitq          // 等待发送数据的goroutine队列，生产队列
+
+	// 锁定保护 hchan 中的所有字段，以及阻塞在此通道上的 sudogs 中的多个字段。
+	// 在保持此锁时不要更改另一个 G 的状态（特别是不要把 G 转为准备状态），因为这可能会导致堆栈收缩而死锁。
+	lock mutex
+}
+```
+:::
+
+### waitq
+::: details
+```go
+
+```
+:::
+
+### makechan
+::: details
+```go
+
+```
+:::
+
+### chansend
+::: details
+```go
+
+```
+:::
+
+### chanrecv
+::: details
+```go
+
+```
+:::
+
+> **参考文章**<br>
+> [1] [二郎腿的博客](https://erlangtui.top)<br>
